--- a/TodoList/TodoList.csproj
+++ b/TodoList/TodoList.csproj
@@ -10,6 +10,12 @@
     <PackageReference Include="Automapper" Version="12.0.1" />
     <PackageReference Include="Automapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="GraphQL" Version="7.4.1" />
+    <PackageReference Include="GraphQL.DataLoader" Version="7.4.1" />
+    <PackageReference Include="GraphQL.MemoryCache" Version="7.4.1" />
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="7.4.0" />
+    <PackageReference Include="GraphQL.Server.Ui.Altair" Version="7.4.0" />
+    <PackageReference Include="GraphQL.SystemTextJson" Version="7.4.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
