--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "redux": "^4.2.1",
     "redux-observable": "^2.0.0",
     "redux-thunk": "^2.4.2",
